<resources>
    <string name="app_name">Heart Rate Chicken Embryos</string>
    <string name="pulse">Pulse</string>
    <string name="second">Second</string>
    <string name="cycle">Cycle</string>
    <string name="start">Start</string>
    <string name="spaces">--</string>
    <string name="mainMenu">Main</string>
    <string name="journalMenu">Journal</string>
    <string name="date">Date</string>
    <string name="measureTime">Measure time (sec)</string>
</resources>