<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/background">

    <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/newMeasurementButton"
            android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="220dp"
                    android:layout_height="80dp"
                    android:src="@drawable/logo"
                    tools:srcCompat="@tools:sample/avatars"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"/>

            <LinearLayout
                    android:id="@+id/linearSurface"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    android:background="@drawable/border"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextureView
                        android:id="@+id/surface"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="2dp"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/tableHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/linearSurface"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp">

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/pulseTitleTextView"
                            android:text="@string/pulse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/surface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                            android:id="@+id/pulseTextView"
                            android:text="@string/spaces"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textAlignment="center"
                            android:layout_marginTop="15dp"
                            app:layout_constraintTop_toBottomOf="@+id/surface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                </LinearLayout>

                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray_300"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/secondTitleTextView"
                            android:text="@string/second"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/surface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                            android:id="@+id/secondTextView"
                            android:text="@string/spaces"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textAlignment="center"
                            android:layout_marginTop="15dp"
                            app:layout_constraintTop_toBottomOf="@+id/surface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                </LinearLayout>

                <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/gray_300"/>

                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.33"
                        android:orientation="vertical">
                    <TextView
                            android:id="@+id/cycleTitleTextView"
                            android:text="@string/cycle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textAlignment="center"
                            app:layout_constraintTop_toBottomOf="@+id/surface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                            android:id="@+id/cycleTextView"
                            android:text="@string/spaces"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:textSize="30sp"
                            android:textAlignment="center"
                            android:layout_marginTop="15dp"
                            app:layout_constraintTop_toBottomOf="@+id/surface"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
            android:id="@+id/newMeasurementButton"
            android:text="@string/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:height="60dp"
            style="@style/btnStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>